--- a/style.css
+++ b/style.css
@@ -1,19 +1,123 @@
+html{
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 0;
+}
+
 img {
     width: 300px;
     height: 300px;
   }
 
-  .header {
+.header {
     background-color: #1F2937;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
 }
 
 ul {
     font-size: 18px;
     color: #E5E7EB;
+    display: flex;
+    margin-right: 20px;
+}
+
+li {
+    list-style: none;
+    margin: 5px;
 }
 
 .header .title {
     font-size: 24px;
     color: #F9FAF8;
+    margin: 20px;
 }
+
+.first-container {
+    background-color: #1F2937;
+    color: white;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex:1;
+
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+}
+
+.second-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 5px;
+    flex:1;
+
+}
+.images {
+    display: flex;
+    flex-direction: row;
+}
+
+.second-container .title {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 800;
+}
+
+h3 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+.third-container {
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex:1;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+
+}
+
+.action-text{
+    display: flex;
+    flex-direction: column;
+}
+
+.action {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: -50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+}
+
